--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+# 데이터 파일
 mnist_784.arff
+
+# AI 모델 파일들 (용량이 큼)
+models/
+*.caffemodel
+*.weights
+
+# Python 캐시
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Jupyter Notebook 체크포인트
+.ipynb_checkpoints/
